syntax = "proto3";

package dcn;

message TransformationDef
{
    string name = 1;
    repeated int32 args = 2;
}

message Dimension
{
    repeated TransformationDef transformations = 1;
}

// Public-facing minimal definition
message Feature 
{
    string name = 1;
    repeated Dimension dimensions = 2;
}

// Internal full record (used in storage, indexing, etc.)
message FeatureRecord 
{
  Feature feature = 1;
  string owner = 2;
}